--- a/sitio/estilos/estilos.css
+++ b/sitio/estilos/estilos.css
@@ -469,7 +469,7 @@ footer > p:last-child{
     justify-content: space-around;
 }
 #panel-admin > div div {
-    width: 38vw;
+    width: 25vw;
     background-color: #fff;
     box-shadow: 0 0 20px #BFBEBD;
     display: block;
@@ -500,9 +500,7 @@ footer > p:last-child{
     border-radius: 20px;
     margin: 50px;
 }
-#admin > div:hover {
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
+
 #admin > div a {
     display: flex;
     align-items: center;
@@ -518,6 +516,14 @@ footer > p:last-child{
     background-repeat: no-repeat;
     background-size: contain;
     margin: 0 10px 0 0;
+}
+#interaccion {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+#interaccion > div:last-child:hover {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .admin-imagen {
     text-align: center;
@@ -612,4 +618,17 @@ td .btn:hover{
     border: 1px solid #ced4da;
     padding: 10px;
     border-radius: 0.25rem;
+}
+.buscar div{
+    margin-right: 20px;
+}
+.paginacion {
+    display: flex;
+}
+.paginacion ul{
+    display: flex;
+    list-style: none;
+}
+.paginacion ul li {
+    margin: 0 10px;
 }
